# MoDELib2

./: .gitignore
include/ConfigurationFields/: ConfigurationFields.h
include/DDvtk/: VTKsegments.h
include/DefectsFields/: DefectsFieldsExtractor.h
include/DislocationDynamics/: BVPsolver.h  DDtimeIntegrator.h  DefectiveCrystal.h  DislocationDynamicsModule.h  DislocationGlideSolverFactory.h  DislocationJunctionFormation.h  DislocationLoop.h  DislocationNetwork.h  DislocationNetworkIO.h  DislocationNodeContraction.h  DislocationNodeContraction_OLD.h  DislocationQuadraturePoint.h  ExternalLoadControllerBase.h  GalerkinGlideSolver.h  PyGlideSolver.h  UniformExternalLoadController.h
include/DislocationDynamicsBase/: ConfigurationFields.h  DDconfigFields.h  DislocationDynamicsBase.h  DislocationFieldBase.h  DislocationLoopPatches.h  PolyhedronInclusion.h  StraightDislocationSegment.h  StressStraight.h
include/DislocationDynamicsIO/: DefectiveCrystalParameters.h
include/DislocationMicrostructure/: PeriodicDipoleGenerator.h  PlanarLoopGenerator.h
include/DislocationMobilities/: DislocationMobilityPy.h  DislocationMobilitySelector.h
include/Geometry/: Polygon2D.h  SutherlandHodgman.h
include/GlidePlanes/: GlidePlaneBase.h  GlidePlaneNoise.h
include/IO/: IDreader.h  TextFileParser.h
include/Lattices/: LatticeModule.h  LatticePlane.h
include/Mesh/: Simplex.h  SimplicialMesh.h  TriangularMesh.h
include/PolycrystallineMaterials/: BCClattice.h  FCClattice.h  GammaSurface.h  Grain.h  PolycrystallineMaterialBase.h  SecondPhase.h  SingleCrystalBase.h  SlipSystem.h
include/vtk/: DDFieldWidget.h  DDconfigVtk.h  GlidePlaneActor.h  InclusionActor.h  NetworkLinkActor.h  NetworkLoopActor.h  NetworkNodeActor.h  QuadratureActor.h
python/: DDMobilityPy.py  MLglideSolver.py  modlibUtils.py
src/ConfigurationFields/: CMakeLists.txt  ConfigurationFields.cpp
src/DDvtk/: CMakeLists.txt  VTKsegments.cpp
src/DefectsFields/: CMakeLists.txt  DefectsFieldsExtractor.cpp
src/DislocationDynamics/: CMakeLists.txt  CrossSlipModels.cpp  DefectiveCrystal.cpp  DislocationCrossSlip.cpp  DislocationGlideSolverFactory.cpp  DislocationLoop.cpp  DislocationLoopNode.cpp  DislocationNetwork.cpp  DislocationNetworkRemesh.cpp  DislocationNode.cpp  DislocationNodeContraction.cpp  DislocationQuadraturePoint.cpp  DislocationSegment.cpp  ExternalLoadControllerBase.cpp  GalerkinGlideSolver.cpp  PyGlideSolver.cpp  UniformExternalLoadController.cpp
src/DislocationDynamicsBase/: CMakeLists.txt  ConfigurationFields.cpp  DDconfigFields.cpp  DislocationDynamicsBase.cpp  DislocationLoopPatches.cpp  PolyhedronInclusion.cpp  StraightDislocationSegment.cpp  StressStraight.cpp
src/DislocationDynamicsIO/: DefectiveCrystalParameters.cpp
src/DislocationMicrostructure/: CMakeLists.txt  IrradiationDefectsGenerator.cpp  MicrostructureGenerator.cpp  PeriodicDipoleGenerator.cpp  PlanarLoopGenerator.cpp  PolyhedronInclusionsGenerator.cpp  PrismaticLoopGenerator.cpp
src/DislocationMobilities/: CMakeLists.txt  DislocationMobilityPy.cpp  DislocationMobilitySelector.cpp
src/Geometry/: CMakeLists.txt  FiniteLineSegment.cpp
src/GlidePlanes/: CMakeLists.txt  GlidePlaneBase.cpp  GlidePlaneNoise.cpp
src/Lattices/: CMakeLists.txt
src/Mesh/: SimplicialMesh.cpp  TriangularMesh.cpp
src/PolycrystallineMaterials/: BCClattice.cpp  FCClattice.cpp  GammaSurface.cpp  Grain.cpp  HEXlattice.cpp  PolycrystallineMaterialBase.cpp  SecondPhase.cpp  SingleCrystalBase.cpp  SlipSystem.cpp
src/vtk/: DDFieldWidget.cpp  DDconfigVtk.cpp  GlidePlaneActor.cpp  InclusionActor.cpp  NetworkLinkActor.cpp  NetworkLoopActor.cpp  NetworkNodeActor.cpp
tools/DD2MD/: CMakeLists.txt
tools/DDfields/: CMakeLists.txt  ddFields.cpp  ddFields.py
tools/DDomp/: CMakeLists.txt  DDomp.cpp
tools/DDqt/: CMakeLists.txt
tools/DDsegments/: CMakeLists.txt
tools/DDsegments/dxa/: dxa_ovito_0_quadrature.vtk
tools/DDsegments/inputFiles/: vtkSegments.txt
tools/DefectsFields/: CMakeLists.txt  defectsFields.cpp  defectsFields.py
tools/MicrostructureGenerator/: CMakeLists.txt  microstructureGenerator.cpp
tutorials/DislocationDynamics/MaterialsLibrary/: Al.txt  AlMg10.txt  AlMg15.txt  AlMg5.txt  Co.txt  Cu.txt  Ni.txt  W.txt  Zr.txt
tutorials/DislocationDynamics/MeshLibrary/: cube2D_8nodes.msh
tutorials/DislocationDynamics/MicrostructureLibrary/: periodicDipole.txt  periodicLoops.txt  planarLoop.txt  polyhedronInclusionIndividual.txt  prismaticLoopDensity.txt  prismaticLoops.txt
tutorials/DislocationDynamics/NoiseLibrary/: noise_xz.vtk  noise_yz.vtk
tutorials/DislocationDynamics/periodicDomains/: DD.txt
tutorials/DislocationDynamics/periodicDomains/dipoleNoise/inputFiles/: AlMg15.txt  DD.txt  GeneratePolyCrystalFile.py  generateInputFiles.py  initialMicrostructure.txt  periodicDipole.txt  periodicLoops.txt  polycrystal.txt
tutorials/DislocationDynamics/periodicDomains/superalloy/inputFiles/: generateInputFiles.py  generatePolyCrystalFile.py  initialMicrostructure.txt  periodicDipole.txt  periodicLoops.txt  planarLoop1.txt  planarLoop2.txt  polycrystal.txt  polyhedronInclusionIndividual.txt  uniformExternalLoadController.txt
tutorials/DislocationDynamics/periodicDomains/uniformLoadController/inputFiles/: DD.txt  GeneratePolyCrystalFile.py  generateInputFiles.py  initialMicrostructure.txt  polycrystal.txt  uniformExternalLoadController.txt
